--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "backend",
+  "name": "prepboltx-backend",
   "version": "1.0.0",
-  "description": "Backend for PrepBoltX - Online Preparation Platform",
+  "description": "Backend for PrepBoltX placement preparation platform",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "seed": "node src/utils/seedData.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-external-api": "node src/utils/testExternalAPI.js"
   },
   "keywords": [
+    "placement",
+    "preparation",
     "education",
-    "quiz",
-    "interview",
-    "preparation"
+    "quiz"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
-    "bcrypt": "^5.1.1",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2",
-    "openai": "^4.24.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
